cabal-version:      3.0
name:               hss
version:            0.1.0.0
synopsis:           Write scripts in Haskell like a scripter would.
-- description:
homepage:           https://github.com/marseillebd/hss
license:            BSD-2-Clause
license-file:       LICENSE
author:             Marseille Bouchard
maintainer:         marseillebd@proton.me
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:
      base >=4.17,
      bytestring ^>=0.12,
    hs-source-dirs:   src
    default-language: Haskell2010

executable hss
    import:           warnings
    main-is:          Main.hs
    -- other-modules:    Paths_hss
    -- autogen-modules:  Paths_hss
    build-depends:
        base,
        bytestring,
        directory,
        filepath,
        here,
        hss,
        random,
        shh,
        text,

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
      ExtendedDefaultRules,
      LambdaCase,
      OverloadedStrings,
      QuasiQuotes,
      TemplateHaskell,
    -- other-extensions:

test-suite hss-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        hss
