cabal-version:      3.0
name:               hss
version:            0.1.0.0
synopsis:           Write scripts in Haskell like a scripter would.
-- description:
homepage:           https://github.com/marseillebd/hss
license:            BSD-2-Clause
license-file:       LICENSE
author:             Marseille Bouchard
maintainer:         marseillebd@proton.me
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    ExtendedDefaultRules,
    LambdaCase,
    OverloadedStrings,
    QuasiQuotes,
    TemplateHaskell,
    TypeSynonymInstances,
    FlexibleInstances,

library
    import:           warnings, extensions,
    exposed-modules:
      Hss,
      Hss.String,
    reexported-modules:
      Data.ByteString,
      Data.ByteString.Lazy,
      Data.ByteString.Lazy.Char8,
      Data.Text,
      Data.Text.Lazy,
      Data.Text.Lazy.Encoding,
    -- other-modules:
    -- other-extensions:
    build-depends:
      random,
      base >=4.17,
      bytestring ^>=0.12,
      directory,
      filepath,
      here,
      shh ^>=0.7.1.4,
      text,
      string-like ^>=0.1.0.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable hss
    import:           warnings, extensions
    main-is:          Main.hs
    -- other-modules:    Paths_hss
    -- autogen-modules:  Paths_hss
    build-depends:
      base,
      hss,

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: -Wno-type-defaults

test-suite hss-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        hss
