cabal-version:      3.0
name:               hss
version:            0.1.0.0
synopsis:           Write scripts in Haskell like a scripter would.
-- description:
homepage:           https://github.com/marseillebd/hss
license:            BSD-2-Clause
license-file:       LICENSE
author:             Marseille Bouchard
maintainer:         marseillebd@proton.me
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    DuplicateRecordFields,
    ExtendedDefaultRules,
    FlexibleInstances,
    LambdaCase,
    NamedDefaults,
    NamedFieldPuns,
    NoImplicitPrelude,
    OverloadedRecordDot,
    OverloadedStrings,
    QuasiQuotes,
    TemplateHaskell,
    TypeApplications,
    TypeSynonymInstances,
  other-extensions:
    DefaultSignatures,

library
    import:           warnings, extensions,
    exposed-modules:
      Hss,
      Hss.LinkedList,
      Hss.Path,
      -- Hss.Process,
      Hss.String,
      Hss.String.Bytes,
      Hss.String.Convert,
      Hss.String.LLString,
      Hss.String.Text,
      Hss.String.Types,
    other-modules:
      Hss.Preprelude,
      Hss.String.Internal,
    build-depends:
      base >=4.17,
      bytestring ^>=0.12,
      containers ^>=0.7,
      directory,
      filepath ^>=1.5.2.0,
      here,
      process ^>=1.6.26.0,
      random,
      shh ^>=0.7.1.4,
      -- string-like ^>=0.1.0.1,
      text,
      text-short,
    hs-source-dirs:   src
    default-language: Haskell2010

executable hss
    import:           warnings, extensions
    main-is:          Main.hs
    -- other-modules:    Paths_hss
    -- autogen-modules:  Paths_hss
    build-depends:
      base,
      hss,

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: -Wno-type-defaults

test-suite hss-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        hss
