cabal-version:      3.0
name:               SCRIPTNAME
version:            0.1.0.0
-- description:
homepage:           https://github.com/marseillebd/hss
maintainer:         marseillebd@proton.me
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: SCRIPTNAME.cabal

common warnings
    ghc-options: -Wall

executable SCRIPTNAME
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        directory,
        filepath,
        hss,
        random,
        shh,

    default-language: Haskell2010
    default-extensions:
      ExtendedDefaultRules,
      LambdaCase,
      OverloadedStrings,
      TemplateHaskell,
